<resources>
    <string name="app_name">PodMe</string>
    <string name="err_msg_password_confirm">Password Mismatch</string>
    <string name="my_feed">My Feed</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="add_podcast">Add Podcast</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Key name in SharedPreferences -->
    <string name="pref_podcast_title_key" translatable="false">pref_podcast_title</string>
    <string name="pref_episode_title_key" translatable="false">pref_episode_title</string>
    <string name="pref_episode_image_key" translatable="false">pref_episode_image</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="name">Name</string>
    <string name="edit_name">Edit Name</string>
    <string name="Username">Username</string>
    <string name="edit_username">Edit Username</string>
    <string name="Bio">Bio</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="Change_profile_picture">Change Profile Picture</string>
    <string name="save">Save</string>
    <string name="rationale_storage">Access to storage is needed. Please grant it to continue</string>
    <string name="artwork_content_description">Artwork</string>
    <!-- The transition name -->
    <string name="transition_detail" translatable="false">transition_detail</string>
    <string name="transition_subscribe" translatable="false">transition_subscribe</string>
    <string name="transition_now" translatable="false">transition_now</string>
    <!-- Toast -->
    <string name="toast_start_downloading">Start downloading&#8230;</string>
    <string name="toast_download_completed">Download completed</string>
    <string name="toast_remove_downloaded_episode">Remove downloaded episode</string>
    <string name="toast_download_failed">Download failed</string>
    <string name="toast_feed_url_null">The podcast feed URL is null</string>
    <string name="toast_query">query:\u0020</string>
    <string name="toast_source_error">Source error</string>

    <!-- Snackbar messages -->
    <string name="snackbar_subscribed">Subscribed</string>
    <string name="snackbar_removed">Removed</string>
    <string name="snackbar_action_go">Go to Podcasts</string>
    <string name="snackbar_added_to_fav">Added to Favorites</string>
    <string name="snackbar_removed_from_fav">Removed from Favorites</string>
    <string name="snackbar_support_audio">Sorry, we currently only support audio podcasts</string>
    <string name="date_of_birth">Date of birth</string>
    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_country">Country</string>
    <string name="search_hint">Search for podcasts</string>
    <!-- Key name for storing country in SharedPreferences -->
    <string name="pref_country_key" translatable="false">country</string>
    <!-- Default for country preference -->
    <string name="pref_country_default" translatable="false">us</string>

    <!-- Labels for country preference -->
    <string name="pref_country_label_ca">Canada</string>
    <string name="pref_country_label_kr">South Korea</string>
    <string name="pref_country_label_us">United States</string>

    <!-- Values in SharedPreferences for country option-->
    <string name="pref_country_ca" translatable="false">ca</string>
    <string name="pref_country_kr" translatable="false">kr</string>
    <string name="pref_country_us" translatable="false">us</string>

    <!-- The title of CountryPreferenceDialog -->
    <string name="title_country_dialog">Choose a country</string>

    <!-- A string that will be shown to users to indicate that podcast data is loading -->
    <string name="loading">loading&#8230;</string>

    <!-- Text for the subscribe button and label for the SubscribeActivity -->
    <string name="subscribe">Subscribe</string>
    <!-- Text for the unsubscribe button -->
    <string name="unsubscribe">Unsubscribe</string>
    <!-- Space used to set the title in the expanded collapsing toolbar -->
    <string name="space" translatable="false">\u0020</string>
    <string name="empty_search_results">No results found</string>
    <string name="palette_content_desc">Background color extracted from artwork</string>
    <string name="scrim_content_desc">Gradient scrim</string>
    <string name="download_channel_name">Download</string>
    <string name="playback_channel_name">Playback</string>
    <string name="check_out">"Check out "</string>
    <string name="chooser_title">Share Episode</string>
    <string name="empty_downloads">You have not downloaded any episodes</string>
    <string name="empty_podcasts">You do not have any subscriptions.\nYou can click         the + button in the bottom right corner to add new podcasts.</string>
    <string name="action_delete">Delete</string>
    <string name="empty_favorites">Start adding your favorite episodes by tapping a heart button!</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="string_edit_bio" />


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_log_out">LogOutActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="PodMe">Places </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="longi">Longitude</string>
    <string name="lati">Latitude</string>
    <string name="load_map">Load Map</string>
    <string name="_address">Load address</string>
    <string name="load_address">Load Address</string>
    <string name="title_activity_current_map">CurrentMapActivity</string>
    <string name="AIzaSyBxK9Yo1AhjIGllOy6SoJirN6w380lvi7g" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
    <string name="title_activity_location">LocationActivity</string>

</resources>