<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pod_casts"
            android:focusable="true"
            android:icon="@drawable/ic_home"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_favorites"
            android:focusable="true"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_downloads"
            android:focusable="true"
            android:icon="@drawable/ic_baseline_cloud_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_edit_profile"
            android:focusable="true"
            android:icon="@drawable/ic_baseline_account_circle"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_settings"
            android:focusable="true"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/settings" />
    </group>

</menu>