<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_download"
        android:focusable="true"
        android:icon="@drawable/ic_menu_download"
        android:nextFocusRight="@+id/action_favorite"
        android:title="@string/action_download"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:focusable="true"
        android:icon="@drawable/ic_baseline_favorite"
        android:nextFocusLeft="@+id/action_download"
        android:nextFocusRight="@+id/action_share"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:focusable="true"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:nextFocusLeft="@+id/action_favorite"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
</menu>